Added Puppy Recipes

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 TextProcessing/.ipynb_checkpoints/CountingWords_final-checkpoint.ipynb
+JSON_APIs/.ipynb_checkpoints/PuppyRecipes-checkpoint.ipynb
+JSON_APIs/.ipynb_checkpoints/Using_JSON_APIs-checkpoint.ipynb
