Added classwork on 2 dec

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 TextProcessing/.ipynb_checkpoints/CountingWords_final-checkpoint.ipynb
 JSON_APIs/.ipynb_checkpoints/PuppyRecipes-checkpoint.ipynb
 JSON_APIs/.ipynb_checkpoints/Using_JSON_APIs-checkpoint.ipynb
+WebScraping/~$center.xlsx
+WebScraping/~$centrs_30.xlsx
+WebScraping/center.json
+WebScraping/center.xlsx
+WebScraping/centre_hand_over_12_2_17_57.xlsx
+WebScraping/centre_hand_over_12_2_17_59.xlsx
+WebScraping/centrs_30.xlsx
+WebScraping/.ipynb_checkpoints/Web Scraping Apartments_class_02_12_20-checkpoint.ipynb
+WebScraping/.ipynb_checkpoints/Web Scraping with Pandas-checkpoint.ipynb
+WebScraping/.ipynb_checkpoints/Web Scraping Apartments-checkpoint.ipynb
