Add Kaggle subfolder to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ WebScraping/centrs_30.xlsx
 WebScraping/.ipynb_checkpoints/Web Scraping Apartments_class_02_12_20-checkpoint.ipynb
 WebScraping/.ipynb_checkpoints/Web Scraping with Pandas-checkpoint.ipynb
 WebScraping/.ipynb_checkpoints/Web Scraping Apartments-checkpoint.ipynb
+kaggle/
