news outlets climate change

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ WebScraping/.ipynb_checkpoints/Web Scraping Apartments_class_02_12_20-checkpoint
 WebScraping/.ipynb_checkpoints/Web Scraping with Pandas-checkpoint.ipynb
 WebScraping/.ipynb_checkpoints/Web Scraping Apartments-checkpoint.ipynb
 kaggle/
+analysis/.ipynb_checkpoints/news-outlets-climate-change-checkpoint.ipynb
