Climate Change improvements in class

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@ WebScraping/.ipynb_checkpoints/Web Scraping with Pandas-checkpoint.ipynb
 WebScraping/.ipynb_checkpoints/Web Scraping Apartments-checkpoint.ipynb
 kaggle/
 analysis/.ipynb_checkpoints/news-outlets-climate-change-checkpoint.ipynb
+analysis/~$publication_stats.xlsx
+analysis/publication_stats.xlsx
+analysis/publications_word_use.png
+analysis/publications.png
