Digital Discourse Final Project

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ analysis/~$publication_stats.xlsx
 analysis/publication_stats.xlsx
 analysis/publications_word_use.png
 analysis/publications.png
+.ipynb_checkpoints/Digital Discourse Final Project-checkpoint.ipynb
