added web scraping

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,6 @@ JSON_APIs/mock_data.xlsx
 WebScraping/agenskalns_hand_over_11_30_17_45.xlsx
 WebScraping/center.csv
 WebScraping/centrs_30_11_2022.xlsx
+WebScraping/~$aganskalns_30.xlsx
+WebScraping/aganskalns_30.xlsx
+WebScraping/aganskalns_20241129_195346.xlsx
